# kaliveda

./: CMakeLists.txt  KVConfig.h.in  Makefile  README.md  VERSION  index.html
BackTrack/base/: GenericModel_Binned.cpp  GenericModel_Binned.h  NewRooAddPdf.cpp  NewRooAddPdf.h  NewRooMinimizer.cpp  NewRooMinuit.cpp
BackTrack/examples/: simpleBinned2Dmodel_ex.C  simpleBinnedGEMINImodel_ex.C
BackTrack/models/: SimpleGeminiModel_Binned.cpp
FAZIA/: CMakeLists.txt
FAZIA/FAZIASYM/: OoODetectors.env
FAZIA/analysis/: KVFAZIAGroupReconstructor.cpp  KVFAZIAGroupReconstructor.h  KVFAZIARawDataReconstructor.cpp
FAZIA/etc/: kaliveda-fazia.rootrc
FAZIA/geometry/: KVFAZIA.cpp  KVFAZIA.h  KVFAZIACOR.cpp  KVFAZIADetector.cpp  KVFAZIADetector.h
KVIndra/: CMakeLists.txt
cmake/: GetCompilerStandard.cmake  KaliVedaConfig.cmake.in  KaliVedaUseFile.cmake
css/: navbar.css
examples_builder/: CMakeLists.txt  generate_compile_example_analysis.cpp
execs/: CMakeLists.txt  irods_uploader.cpp  kvtreeanalyzer.cxx
html/: ClassRefIndex_head.html  appli.html  build.html  docker.html  download.html  header.html  header_bot.html  index.html  other_soft.html  prereq.html  usersguide_head.html
tools/: get_compiler_standard.cpp  make_example_analysis_classes.sh
usersguide/: 00_gettingstarted.txt  01_events.txt  02_analysis.txt  03_globalvariables.txt  04_geometry.txt  05_energyloss.txt  06_filter.txt  08_identification.txt  Makefile  analyis.txt  calibrations.txt  energyloss.txt  geometry.txt  identification.txt  indrafazia-e789.txt.bck  rootdoc.css  strip_number
(+356 files in other folders)
